Fixed settings menu being off screen when volume and/or fullscreen buttons were hidden

--- a/src/public/style.scss
+++ b/src/public/style.scss
@@ -13,7 +13,7 @@
   &> .container {
     position: absolute;
     bottom: 45px;
-    right: -125px;
+    right: 0;
     width: 230px;
     padding: 15px 20px;
     border: 1px solid rgba(42, 49, 67, 0.65);
@@ -65,7 +65,7 @@
       content: "";
       position: absolute;
       bottom: -12px;
-      right: 133px;
+      right: 9px;
       width: 0;
       height: 0;
       border: 6px solid #3f5778;
